--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "ts-node": "10.8.1"
   },
   "devDependencies": {
+    "@types/node": "18.0.0",
     "typescript": "4.7.4"
   },
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/Runner.ts"
   }
 }
