--- a/package.json
+++ b/package.json
@@ -24,9 +24,18 @@
   },
   "devDependencies": {
     "@types/node": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.57.1",
+    "@typescript-eslint/parser": "5.57.1",
+    "eslint": "8.37.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.8.7",
     "typescript": "4.7.4"
   },
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
     "start": "ts-node src/Runner.ts"
   },
   "engines": {
