--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   },
   "homepage": "https://github.com/mskalnik/leek#readme",
   "dependencies": {
-    "discord.js": "13.8.1",
-    "dotenv": "16.0.1",
-    "ts-node": "10.8.1"
+    "discord.js": "14.9.0",
+    "dotenv": "16.0.3",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
+    "@types/node": "18.15.11",
     "@typescript-eslint/eslint-plugin": "5.57.1",
     "@typescript-eslint/parser": "5.57.1",
     "eslint": "8.37.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.8.7",
-    "typescript": "4.7.4"
+    "prettier": "2.8.7"
   },
   "scripts": {
     "lint": "eslint .",
